// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BuildBranchBadge /> tests snapshot test 1`] = `
<div>
  <div
    class="main"
  >
    <span
      class="greyBox"
    >
      <span
        class="bp3-icon bp3-icon-git-branch StyledProps--main greyBoxIcon StyledProps--color StyledProps--color-grey500"
        icon="git-branch"
      >
        <svg
          data-icon="git-branch"
          height="10"
          viewBox="0 0 16 16"
          width="10"
        >
          <desc>
            git-branch
          </desc>
          <path
            d="M12 1c-1.66 0-3 1.34-3 3 0 1.25.76 2.32 1.85 2.77A2.02 2.02 0 019 8H7c-.73 0-1.41.2-2 .55V5.82C6.16 5.4 7 4.3 7 3c0-1.66-1.34-3-3-3S1 1.34 1 3c0 1.3.84 2.4 2 2.82v4.37c-1.16.4-2 1.51-2 2.81 0 1.66 1.34 3 3 3s3-1.34 3-3c0-1.04-.53-1.95-1.32-2.49.35-.31.81-.51 1.32-.51h2c1.92 0 3.52-1.35 3.91-3.15A2.996 2.996 0 0012 1zM4 2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm0 12c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm8-9c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="branchName"
      >
        branchName1
      </span>
    </span>
    <span
      class="greyBox"
    >
      <span
        class="bp3-icon bp3-icon-git-commit StyledProps--main greyBoxIcon StyledProps--color StyledProps--color-grey500"
        icon="git-commit"
      >
        <svg
          data-icon="git-commit"
          height="10"
          viewBox="0 0 16 16"
          width="10"
        >
          <desc>
            git-commit
          </desc>
          <path
            d="M15 7h-3.14c-.45-1.72-2-3-3.86-3S4.59 5.28 4.14 7H1c-.55 0-1 .45-1 1s.45 1 1 1h3.14c.45 1.72 2 3 3.86 3s3.41-1.28 3.86-3H15c.55 0 1-.45 1-1s-.45-1-1-1zm-7 3c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      commitI
    </span>
  </div>
</div>
`;

exports[`<BuildBranchBadge /> tests snapshot test 2`] = `
<div>
  <div
    class="main"
  >
    <span
      class="greyBox"
    >
      <span
        class="bp3-icon bp3-icon-git-branch StyledProps--main greyBoxIcon StyledProps--color StyledProps--color-grey500"
        icon="git-branch"
      >
        <svg
          data-icon="git-branch"
          height="10"
          viewBox="0 0 16 16"
          width="10"
        >
          <desc>
            git-branch
          </desc>
          <path
            d="M12 1c-1.66 0-3 1.34-3 3 0 1.25.76 2.32 1.85 2.77A2.02 2.02 0 019 8H7c-.73 0-1.41.2-2 .55V5.82C6.16 5.4 7 4.3 7 3c0-1.66-1.34-3-3-3S1 1.34 1 3c0 1.3.84 2.4 2 2.82v4.37c-1.16.4-2 1.51-2 2.81 0 1.66 1.34 3 3 3s3-1.34 3-3c0-1.04-.53-1.95-1.32-2.49.35-.31.81-.51 1.32-.51h2c1.92 0 3.52-1.35 3.91-3.15A2.996 2.996 0 0012 1zM4 2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm0 12c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm8-9c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="branchName"
      >
        branchName1
      </span>
    </span>
  </div>
</div>
`;
